--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "groq-chatbot",
   "version": "1.0.0",
   "type": "module",
-  "scripts": { "start": "node server.js" },
+  "scripts": { "start": "vercel dev" },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
